# telecom-churn

./: README.md  pyproject.toml  solution.ipynb  solution_v0.ipynb
data/outputs/tables/: 3_1_descriptive_stats.csv  3_6_correlacion_churn.csv  6_9_mutual_information_scores.csv  7_1_cross_validation_results.csv  7_7_comparacion_modelos.csv  7_8_comparacion_modelos.csv  8_1_feature_importance_table.csv  9_segmentacion_riesgo.csv
