[project]
name = "telecom"
version = "1.0.0"
description = "A Python package done by jkn"
readme = "README.md"
license = { text = "CC-BY-4.0" }
requires-python = ">=3.11,<3.13"

authors = [
    { name = "John K. Barrera", email = "johnkevinbarrera@gmail.com" },
]
maintainers = [
    { name = "John K. Barrera", email = "johnkevinbarrera@gmail.com" },
]

keywords = ["machine-learning", "telecom", "python", "data-science"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "colorama>=0.4.6",
    "contextily>=1.6.2",
    "dask-geopandas>=0.5.0",
    "fiona>=1.10.1",
    "folium>=0.19.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "matplotlib-scalebar>=0.9.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<2.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "langchain_openai",
    "azure-identity",
    "openai>=1.0.0",
    "xgboost>=3.2.0",
    "seaborn>=0.13.2",
    "lightgbm>=4.6.0",
    "optuna>=4.9.0",
    "category_encoders>=2.9.0",
]

[project.scripts]
release = "scripts.release:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
